erDiagram
    %% Контент и уведомления

    users ||--o{ notifications : user_id
    knowledge_categories ||--o{ knowledge_articles : category_id
    users ||--o{ knowledge_articles : author_id
    organizations ||--o{ news : organization_id
    users ||--o{ news : author_id
    news_categories ||--o{ news : category_id

    knowledge_articles {
        uuid id
        uuid category_id
        text title
        text status
        uuid author_id
    }

    knowledge_categories {
        uuid id
        text name
    }

    news {
        uuid id
        uuid organization_id
        text title
        text status
        uuid author_id
        uuid category_id
    }

    news_categories {
        uuid id
        text name
    }

    notifications {
        uuid id
        uuid user_id
        text type
        text title
        text body
        boolean is_read
    }

    organizations {
        uuid id
        text name
    }

    users {
        uuid id
        text email
        text first_name
        text last_name
    }
